--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,31 @@
+*.apk
+*.hprof
 *.iml
+*.jks
+*.keystore
+*.log
 .gradle
+.gradle/
 /local.properties
+.idea/
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
 .DS_Store
 /build
+build/
 /captures
+captures/
 .externalNativeBuild
+.externalNativeBuild/
 .cxx
+.cxx/
 local.properties
+output.json
+google-services.json
